unpackaged/main/default/objects/Credit_Note_Line__c/Credit_Note_Line__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line</label>
    <nameField>
        <displayFormat>CNL-{00000}</displayFormat>
        <label>Credit Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>