unpackaged/main/default/objects/Credit_Note_Line__c/fields/Application_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Application_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Line Item</label>
    <referenceTo>Application_Line_Item__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>Credit_Note_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>