unpackaged/main/default/objects/Credit_Note_Line__c/fields/List_Price_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Inc_VAT__c</fullName>
    <label>List Price Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>